[package]
name = "hecs-arkanoid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24.2"
hecs = "0.10.3"
nalgebra = { version = "0.32.3", features = ["convert-glam024", "glam024"] }
rand = "0.8.5"
rapier2d = {version="0.17.2", features=[]}
raylib = "3.7.0"
strum = "0.25.0"
strum_macros = "0.25.2"
